Fix app info dialog elevation issue

Changes:
Enable 24dp elevation of the app info dialog to make it more visible
against light background.

Bug: 874816
Change-Id: Iaef61fc058a4495c021d85de1a57cadf279e0139
Reviewed-on: https://chromium-review.googlesource.com/c/1395868
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620636}
Former-commit-id: 2b3d3bc3ee6e9b6e3bfb808ccc814db08af38922